# opencv_examples

./: CMakeLists.txt  LICENSE  README.adoc
cmake/: StandardProjectSettings.cmake
src/: CMakeLists.txt
src/basic_drawing_example/: CMakeLists.txt  basic_drawing_example.cpp
src/get_build_information/: CMakeLists.txt  get_build_information.cpp
src/load_image_example/: CMakeLists.txt  load_image_example.cpp
